Make sure to save the layout state when navigating to a cached presentation, in case the content viewer for the previous page is not saved or is later evicted.  Bug 321671, r=biesi.